--- a/F1nalLap/src/app/pages/memorable-temps/memorable-temps.component.html
+++ b/F1nalLap/src/app/pages/memorable-temps/memorable-temps.component.html
@@ -1,129 +1,217 @@
 <div class="container">
-    <div class="content">
-        <header>
-            <h1>F1nal Lap</h1>
-            <img src="https://www.formula1.com/etc/designs/fom-website/images/f1_logo.svg" alt="Fórmula 1 Logo">
-        </header>
+  <div class="content">
+    <header>
+      <h1>F1nal Lap</h1>
+      <img
+        src="https://www.formula1.com/etc/designs/fom-website/images/f1_logo.svg"
+        alt="Fórmula 1 Logo"
+      />
+    </header>
 
-        <div id="progress-container">
+    <div id="progress-container">
+      <nav>
+        <a href="home">Inicio</a>
+        <a href="actual">Temporada Actual</a>
+        <a href="last">Últimas Temporadas</a>
+        <a href="memorable">Temporadas Memorables</a>
+        <a href="circuits">Circuitos</a>
+      </nav>
 
-            <nav>
-                <a href="home">Inicio</a>
-                <a href="actual">Temporada Actual</a>
-                <a href="last">Últimas Temporadas</a>
-                <a href="memorable">Temporadas Memorables</a>
-                <a href="circuits">Circuitos</a>
-            </nav>
-
-            <div id="progress-bar"></div>
-        </div>
-
-        <div class="contenedor-section">
-            <section id="2012">
-                <h2>2012: La Batalla Épica por el Título</h2>
-
-                <p>La temporada de 2012 fue una obra maestra de la emoción, donde el asfalto se convirtió en un
-                    campo de
-                    batalla y el rugido de los motores resonó como un canto de guerra. Sebastian Vettel y Fernando
-                    Alonso, dos titanes del automovilismo, se enfrentaron en una lucha que trascendió lo deportivo.
-                    Cada
-                    carrera era un capítulo de una historia llena de suspenso, donde la esperanza y la desesperación
-                    bailaban al ritmo de cada vuelta.</p>
-
-                <p>Vettel, con su Red Bull, se convirtió en un guerrero de la velocidad, desafiando las leyes de la
-                    física y la lógica, mientras Alonso, el caballero de Ferrari, transformaba cada carrera en una
-                    epopeya de valentía y determinación. El momento culminante llegó en Brasil, donde el corazón de
-                    millones latía al unísono, mientras Vettel luchaba contra el destino, y la emoción se desbordaba
-                    en
-                    cada curva. ¡Una temporada que nos hizo sentir vivos, que nos hizo recordar por qué amamos este
-                    deporte con tanta pasión!</p>
-            </section>
-
-
-            <section id="2005">
-                <h2>2005: El Ascenso de Fernando Alonso</h2>
-
-                <p>En 2005, la Fórmula 1 fue testigo del nacimiento de una leyenda que cambiaría el curso de la
-                    historia. Fernando Alonso, con su Renault, no solo se convirtió en el campeón más joven, sino
-                    que su
-                    viaje fue un canto a la perseverancia y la grandeza. Cada carrera era un testimonio de su
-                    talento y
-                    su espíritu indomable, un recordatorio de que los sueños pueden hacerse realidad si se persiguen
-                    con
-                    fervor.</p>
-
-                <p>El Gran Premio de San Marino fue un hito que quedará grabado en nuestros corazones. Alonso, con
-                    una
-                    sonrisa que iluminaba el circuito, demostró que la grandeza no solo se mide en victorias, sino
-                    en la
-                    capacidad de inspirar a otros. Su emotiva celebración en Imola resonó en el alma de cada
-                    aficionado,
-                    llenándonos de orgullo y emoción. ¡Una temporada que nos enseñó que la grandeza no tiene límites
-                    y
-                    que cada uno de nosotros puede alcanzar las estrellas!</p>
-            </section>
-
-            <section id="1994">
-                <h2>1994: Una Temporada de Tragedia y Cambio</h2>
-
-                <p>La temporada de 1994 es un capítulo marcado por la tragedia, un recuerdo que nos hace reflexionar
-                    sobre la fragilidad de la vida. La pérdida de Ayrton Senna, un ícono que iluminó el
-                    automovilismo
-                    con su pasión y talento, dejó un vacío en nuestros corazones que nunca se llenará. Su accidente
-                    en
-                    Imola fue un momento desgarrador, un instante en el que el mundo del automovilismo se detuvo y
-                    las
-                    lágrimas inundaron los rostros de millones de aficionados.</p>
-
-                <p>Pero en medio de la tristeza, surgió un nuevo campeón: Michael Schumacher. Con su Benetton,
-                    Schumacher se alzó como un nuevo rey en un reino marcado por la pérdida. Ganar su primer título
-                    mundial en un año tan oscuro fue un acto de valentía y determinación. La temporada de 1994 nos
-                    enseñó que la vida es frágil, pero que la pasión y la determinación pueden llevarnos a superar
-                    cualquier obstáculo.</p>
-            </section>
-
-            <section class="1988">
-                <h2>1988: El Dominio de McLaren</h2>
-
-                <p>La temporada de 1988 es un recordatorio de la grandeza de la Fórmula 1, un año en el que la
-                    velocidad
-                    y la habilidad se unieron para crear un espectáculo que nos dejó sin aliento. McLaren, con
-                    Ayrton
-                    Senna y Alain Prost al volante, dominó el campeonato con una autoridad que no se había visto
-                    antes.
-                    Cada carrera era un duelo de titanes, un enfrentamiento de habilidades y estrategias que nos
-                    mantenía al borde de nuestros asientos.</p>
-
-                <p>La rivalidad entre Senna y Prost fue un tema central de la temporada, un enfrentamiento de dos
-                    personalidades que se complementaban y se enfrentaban al mismo tiempo. La victoria de Senna en
-                    el
-                    Gran Premio de Japón fue un momento clave, un ejemplo de su habilidad y estrategia que nos hizo
-                    sentir la emoción de la competencia. La temporada de 1988 fue un recordatorio de que la Fórmula
-                    1 es
-                    un deporte de alta competencia, donde la grandeza se mide en cada vuelta y cada curva.</p>
-            </section>
-
-            <section class="1976">
-                <h2>1976: La Batalla por el Título</h2>
-
-                <p>La temporada de 1976 es un capítulo de la historia de la Fórmula 1 que nos hace sentir la emoción
-                    y
-                    la pasión de este deporte. La lucha por el título entre James Hunt y Niki Lauda fue un
-                    enfrentamiento de dos personalidades que se complementaban y se enfrentaban al mismo tiempo.
-                    Lauda,
-                    con su Ferrari, parecía invencible, pero Hunt, con su McLaren, no se rindió.</p>
-
-                <p>El accidente de Lauda en Nürburgring fue un momento desgarrador que parecía haberle quitado el
-                    título, pero su regreso a las pistas solo seis semanas después fue un ejemplo de su
-                    determinación y
-                    valentía. La última carrera en Japón fue decisiva, con Hunt ganando el título por un solo punto.
-                    ¡Una temporada que nos hizo sentir la emoción y la pasión de la Fórmula 1, que nos hizo recordar
-                    por
-                    qué amamos este deporte con tanta pasión!</p>
-            </section>
-        </div>
+      <div id="progress-bar"></div>
     </div>
-    <footer>
-        <a href="https://www.linkedin.com/in/aalbeerto/" target="_blank">© AGA. Todos los derechos reservados.</a>
-    </footer>
+
+    <div class="contenedor-section">
+      <section id="2012">
+        <h2>2012: La Batalla Épica por el Título</h2>
+        <div class="flex">
+          <div class="flex-texto">
+            <p>
+              La temporada de 2012 fue, sin duda, una de las más intensas y
+              emocionantes de la historia del automovilismo, transformando cada
+              carrera en una verdadera lucha sobre el asfalto. Sebastián Vettel
+              y Fernando Alonso, dos titanes del automovilismo, protagonizaron
+              una batalla que trascendió lo deportivo. Cada gran premio se
+              convirtió en un capítulo de una historia cargada de suspenso,
+              donde la esperanza y la frustración se entrelazaban con cada
+              vuelta completada.
+            </p>
+
+            <p>
+              Vettel, al volante de su Red Bull, se mostró como un auténtico
+              maestro de la velocidad, capaz de desafiar las leyes de la física
+              y superar las expectativas más altas. Por su parte, Alonso, el
+              caballero de Ferrari, convirtió cada carrera en una verdadera
+              muestra de coraje y determinación, llevándonos a todos a vivir una
+              epopeya de superación.
+            </p>
+            <p>
+              El punto álgido de esa temporada llegó en Brasil, cuando los
+              corazones de millones de aficionados latían al mismo ritmo,
+              mientras Vettel se enfrentaba a un destino que parecía ya escrito.
+              Fue una temporada que nos hizo sentir cada emoción al máximo,
+              reforzando nuestro amor por este deporte y demostrando por qué la
+              Fórmula 1 sigue siendo una de las experiencias más apasionantes
+              que existen.
+            </p>
+          </div>
+
+          <div class="flex-imagen">
+            <img
+              src="./../../../assets/images/2012.png"
+              alt="2012: La Batalla Épica por el Título"
+              class="imagen"
+            />
+          </div>
+        </div>
+      </section>
+
+      <section id="2005">
+        <h2>2005: El Ascenso de Fernando Alonso</h2>
+        <div class="flex">
+          <div class="flex-texto">
+            <p>
+              En 2005, la Fórmula 1 vivió el surgimiento de una figura que
+              marcaría un antes y un después en la historia del automovilismo.
+              Fernando Alonso, al volante de su Renault, no solo se coronó como
+              el campeón más joven de la historia de la F1, sino que su camino
+              hacia la gloria fue un ejemplo de perseverancia y excelencia. Cada
+              carrera reflejaba su habilidad y su tenacidad, demostrando que los
+              sueños se pueden convertir en realidad cuando se persiguen con
+              pasión y determinación.
+            </p>
+
+            <p>
+              El Gran Premio de San Marino fue un hito que quedará grabado en
+              nuestros corazones. Con una sonrisa que iluminaba cada rincón del
+              circuito, Alonso nos mostró que la verdadera grandeza no solo se
+              mide en victorias, sino también en la capacidad de inspirar a
+              otros. Su emotiva celebración en Imola tocó el corazón de cada uno
+              de los que seguimos el deporte, dejándonos un sentimiento profundo
+              de orgullo y emoción. Fue una temporada que nos enseñó que los
+              límites de la grandeza no existen y que cualquiera de nosotros
+              puede alcanzar lo más alto si tiene el coraje de intentarlo.
+            </p>
+          </div>
+          <div class="flex-imagen">
+            <img
+              src="./../../../assets/images/2005.png"
+              alt="2005: El ascenso de Fernando Alonso"
+              class="imagen"
+            />
+          </div>
+        </div>
+      </section>
+
+      <section id="1994">
+        <h2>1994: Una Temporada de Tragedia y Cambio</h2>
+        <div class="flex">
+          <div class="flex-texto">
+            <p>
+              La temporada de 1994 es un capítulo marcado por la tragedia, una
+              época que nos invita a reflexionar sobre la vulnerabilidad de la
+              vida. La pérdida de Ayrton Senna, un verdadero ícono que iluminó
+              el mundo de la Fórmula 1 con su pasión y su destreza, dejó un
+              vacío imposible de llenar. Su trágico accidente en Imola fue un
+              golpe devastador, un momento en el que el automovilismo se
+              paralizó y las lágrimas de millones de aficionados recorrieron sus
+              rostros.
+            </p>
+
+            <p>
+              Sin embargo, en medio de la tristeza, emergió un nuevo campeón:
+              Michael Schumacher. Con su Benetton, Schumacher se erigió como el
+              nuevo monarca en un ámbito marcado por la ausencia. Conseguir su
+              primer título mundial en un año tan sombrío fue una demostración
+              de valentía y determinación. La temporada de 1994 nos enseñó que,
+              aunque la vida puede ser frágil, la pasión y la perseverancia son
+              capaces de guiarnos a superar cualquier adversidad.
+            </p>
+          </div>
+          <div class="flex-imagen">
+            <img
+              src="./../../../assets/images/1994.png"
+              alt="1994: Una temporada de tragedia y cambio"
+              class="imagen"
+            />
+          </div>
+        </div>
+      </section>
+
+      <section class="1988">
+        <h2>1988: El Dominio de McLaren</h2>
+        <div class="flex">
+          <div class="flex-texto">
+            <p>
+              La temporada de 1988 es un testimonio de la grandeza de la Fórmula
+              1, un año en el que velocidad y destreza se fusionaron para
+              ofrecer un espectáculo que nos dejó sin aliento. McLaren, con
+              Ayrton Senna y Alain Prost al volante, dominó el campeonato con
+              una autoridad sin precedentes. Cada carrera se convirtió en un
+              duelo de titanes, un enfrentamiento constante de habilidades y
+              estrategias que nos mantenía al borde de nuestros asientos.
+            </p>
+
+            <p>
+              La rivalidad entre Senna y Prost fue uno de los ejes principales
+              de la temporada, un choque de dos personalidades que, al mismo
+              tiempo, se complementaban y se desafiaban. La victoria de Senna en
+              el Gran Premio de Japón se erige como un momento decisivo, una
+              clara muestra de su habilidad y estrategia que nos permitió
+              experimentar toda la intensidad de la competición. La temporada de
+              1988 nos recordó que la Fórmula 1 es un deporte de altísima
+              competencia, donde la grandeza se mide en cada vuelta y en cada
+              curva.
+            </p>
+          </div>
+          <div class="flex-imagen">
+            <img
+              src="./../../../assets/images/1988.png"
+              alt="1988: El dominio de McLaren"
+              class="imagen"
+            />
+          </div>
+        </div>
+      </section>
+
+      <section class="1976">
+        <h2>1976: La Batalla por el Título</h2>
+        <div class="flex">
+          <div class="flex-texto">
+            <p>
+              La temporada de 1976 es uno de esos capítulos legendarios en la
+              historia de la Fórmula 1 que captura toda la emoción y pasión del
+              deporte. La batalla por el campeonato entre James Hunt y Niki
+              Lauda fue el enfrentamiento de dos personalidades opuestas, pero
+              complementarias, que se desafiaban mutuamente en cada momento.
+              Lauda, al volante de su Ferrari, parecía imparable, pero Hunt, con
+              su McLaren, demostró una y otra vez que no iba a rendirse.
+            </p>
+
+            <p>
+              El accidente de Lauda en Nürburgring fue un momento trágico que
+              parecía poner fin a sus aspiraciones de título, pero su regreso
+              tan solo seis semanas después a las pistas fue un claro ejemplo de
+              su fuerza de voluntad y coraje. La última carrera en Japón fue el
+              escenario de una definición épica, donde Hunt se coronó campeón
+              por tan solo un punto. Fue una temporada que nos hizo vibrar con
+              la verdadera esencia de la Fórmula 1, un recordatorio de por qué
+              este deporte nos enamora con tanta intensidad.
+            </p>
+          </div>
+          <div class="flex-imagen">
+            <img
+              src="./../../../assets/images/1976.png"
+              alt="1976: La Batalla por el Título"
+              class="imagen"
+            />
+          </div>
+        </div>
+      </section>
+    </div>
+  </div>
+  <footer>
+    <a href="https://www.linkedin.com/in/aalbeerto/" target="_blank"
+      >© AGA. Todos los derechos reservados.</a
+    >
+  </footer>
 </div>
