--- a/F1nalLap/src/app/pages/circuits/circuits.component.html
+++ b/F1nalLap/src/app/pages/circuits/circuits.component.html
@@ -28,12 +28,8 @@
           </div>
           <div class="tarjeta-contenido">
             <h3>{{ circuito.name_GP }}</h3>
-            <p>Circuito: {{ circuito.name }}</p>
-            <p>
-              Vueltas: {{ circuito.laps }} | Longitud: {{ circuito.length }}
-            </p>
-            <p>Récord: {{ circuito.lap_record }}</p>
-            <a [routerLink]="['/simulador', circuito.name_GP]" class="boton">Simular</a>
+            
+            <a [routerLink]="['/simulador', circuito.name_GP]" class="boton">Mostrar más</a>
 
           </div>
         </div>
