--- a/F1nalLap/src/app/pages/simulador/simulador.component.scss
+++ b/F1nalLap/src/app/pages/simulador/simulador.component.scss
@@ -8,9 +8,7 @@
   transition: transform 0.2s ease;
   cursor: pointer;
 
-  &:hover {
-    transform: scale(1.02);
-  }
+  
 
   .tarjeta-imagen img {
     box-shadow: none;
@@ -63,14 +61,18 @@
 
 #volver {
   width: 75px;
-  margin: 25px auto;
+  margin: 0;
+  margin-top: 0;
+  margin-bottom: 3rem;
   display: flex;
   justify-content: center;
   background-color: rgb(163, 21, 21);
+  padding-left: 0;
+  padding-right: 0;
 
   &:hover {
-    background-color: rgb(255, 0, 0);
-    scale: 1.1;
+    background-color: rgb(216, 0, 0);
+    scale: 1.08;
   }
 }
 
@@ -111,6 +113,8 @@
 
 
 
+
+
 /* 🎯 Responsive */
 @media (min-width: 769px) and (max-width: 1024px) {
   .tarjetas-contenedor {
@@ -139,7 +143,7 @@
 
 @media (max-width: 480px) {
   .tarjetas-contenedor {
-    margin: 2rem auto;
+    margin: 2rem;
     padding: 0.5rem;
   }
 
@@ -149,5 +153,9 @@
 
   .tarjeta-contenido h3 {
     font-size: 0.9rem;
+  }
+
+  .estrategias-resultados{
+    margin: 2rem auto;
   }
 }
