Pequeños cambios de funcionalidad

--- a/F1nalLap/src/app/pages/circuits/circuits.component.html
+++ b/F1nalLap/src/app/pages/circuits/circuits.component.html
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="content">
     <header>
-      <h1>F1nal Lap</h1>
+      <h1><a href="home" class="titulo">F1nal Lap</a></h1>
       <img
         src="https://www.formula1.com/etc/designs/fom-website/images/f1_logo.svg"
         alt="Fórmula 1 Logo"
