--- a/F1nalLap/src/app/pages/home/home.component.html
+++ b/F1nalLap/src/app/pages/home/home.component.html
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="content">
     <header>
-      <h1>F1nal Lap</h1>
+      <h1><a href="home" class="titulo">F1nal Lap</a></h1>
       <img
         src="https://www.formula1.com/etc/designs/fom-website/images/f1_logo.svg"
         alt="Fórmula 1 Logo"
@@ -22,9 +22,9 @@
 
     <div class="contenedor-section">
       <section id="inicio">
-        <h2>Tu vuelta rápida al universo F1</h2>
+        <h2>Bienvenido a F1nalLap</h2>
         <p>
-          Bienvenido a <strong>F1nalLap</strong>, el espacio donde la emoción,
+          Tu vuelta rápida al universo F1, el espacio donde la emoción,
           la historia y la estrategia de la Fórmula 1 se encuentran. Esta
           plataforma nace como un trabajo de fin de grado, pero acelera hacia
           algo más grande: ser tu centro de referencia para revivir, explorar y
