--- a/F1nalLap/src/app/pages/simulador/simulador.component.html
+++ b/F1nalLap/src/app/pages/simulador/simulador.component.html
@@ -2,7 +2,7 @@
 <div class="container">
   <div class="content">
     <header>
-      <h1>F1nal Lap</h1>
+      <h1><a href="../home" class="titulo">F1nal Lap</a></h1>
       <img
         src="https://www.formula1.com/etc/designs/fom-website/images/f1_logo.svg"
         alt="Fórmula 1 Logo"
@@ -24,7 +24,10 @@
     <div class="contenedor-section">
       <div class="tarjetas-contenedor">
         <a href="../circuits" class="boton" id="volver">
-          🡰
+          <img
+            src="./../../../assets/images/flecha.png"
+            alt="Volver"
+            class="flecha-volver">
         </a>
         <div class="tarjeta-imagen">
           <img [src]="circuito.image" [alt]="circuito.name" />
