Optimización de código

--- a/F1nalLap/src/app/pages/home/home.component.scss
+++ b/F1nalLap/src/app/pages/home/home.component.scss
@@ -1,20 +1,29 @@
 .btn-primary {
-    text-decoration: none;
-    color: black;
+  text-decoration: none;
+  color: black;
 }
 
-.btn-primary :hover{
-    text-decoration: underline;
-    color: #da0000;
+.btn-primary :hover {
+  text-decoration: underline;
+  color: #da0000;
 }
 
-#contacto a{
-    text-decoration: none;
-    color: black;
+#contacto a {
+  text-decoration: none;
+  color: black;
 }
 
-#contacto a :hover{
-    text-decoration: underline;
-    color: #da0000;
+#contacto a :hover {
+  text-decoration: underline;
+  color: #da0000;
 }
 
+#que-encontraras a {
+  text-decoration: none;
+  color: black;
+}
+
+#que-encontraras a:hover {
+  text-decoration: underline;
+  color: #da0000;
+}
