Cambios en la funcionalidad y visualización

--- a/F1nalLap/src/app/pages/circuits/circuits.component.html
+++ b/F1nalLap/src/app/pages/circuits/circuits.component.html
@@ -9,7 +9,7 @@
     </header>
 
     <div id="progress-container">
-      <nav>
+      <nav appCloseOtherMenus >
         <a mat-button href="home">Inicio</a>
         
         <button mat-button [matMenuTriggerFor]="Informacion" #triggerTemp="matMenuTrigger">
