--- a/F1nalLap/src/app/pages/simulador/simulador.component.html
+++ b/F1nalLap/src/app/pages/simulador/simulador.component.html
@@ -10,7 +10,7 @@
     </header>
 
     <div id="progress-container">
-      <nav>
+      <nav appCloseOtherMenus>
         <a mat-button href="../home">Inicio</a>
         
         <button mat-button [matMenuTriggerFor]="Informacion" #triggerTemp="matMenuTrigger">
@@ -18,7 +18,7 @@
         </button>
         <mat-menu #Informacion="matMenu">
           <a mat-menu-item href="../actual">Temporada Actual</a>
-          <a mat-menu-item href="../last">Últimas Temporadas</a>
+          <a mat-menu-item href="../last">Temporadas Anteriores</a>
           <a mat-menu-item href="../memorable">Temporadas Memorables</a>
         </mat-menu>
 
