--- a/F1nalLap/src/styles.scss
+++ b/F1nalLap/src/styles.scss
@@ -324,6 +324,20 @@ button:hover {
     font-size: 10px;
   }
 
+  nav {
+    padding: 0;
+  }
+
+  .mat-mdc-button:not(:disabled) { // Boton principal
+    width: 100px !important;
+    font-size: 12px !important;
+  }
+
+  .mat-mdc-menu-content .mat-mdc-menu-item .mat-mdc-menu-item-text{ // Subitem
+    font-size: 11px !important;
+  }
+
+
 }
 
 /* Pantalla MUY Pequeña */
