--- a/F1nalLap/src/app/pages/home/home.component.html
+++ b/F1nalLap/src/app/pages/home/home.component.html
@@ -25,11 +25,17 @@
           Clasificación
         </button>
         <mat-menu #Clasificacion="matMenu">
-          <a mat-menu-item href="#">Pilotos</a>
-          <a mat-menu-item href="#">Equipos</a>
+          <button mat-menu-item [routerLink]="['/ranking']" [queryParams]="{ view: 'drivers' }">
+            Pilotos
+          </button>
+          <button mat-menu-item [routerLink]="['/ranking']" [queryParams]="{ view: 'teams' }">
+            Equipos
+          </button>
         </mat-menu>
+        
 
         <a mat-button href="circuits">Simulador</a>
+        <a mat-button href="prueba">Prueba</a>
       </nav>
 
       <div id="progress-bar"></div>
