--- a/F1nalLap/src/app/pages/last-temps/last-temps.component.html
+++ b/F1nalLap/src/app/pages/last-temps/last-temps.component.html
@@ -25,8 +25,12 @@
           Clasificación
         </button>
         <mat-menu #Clasificacion="matMenu">
-          <a mat-menu-item href="pilotos">Pilotos</a>
-          <a mat-menu-item href="equipos">Equipos</a>
+          <button mat-menu-item [routerLink]="['/ranking']" [queryParams]="{ view: 'drivers' }">
+            Pilotos
+          </button>
+          <button mat-menu-item [routerLink]="['/ranking']" [queryParams]="{ view: 'teams' }">
+            Equipos
+          </button>
         </mat-menu>
 
         <a mat-button href="circuits">Simulador</a>
