--- a/F1nalLap/src/app/pages/last-temps/last-temps.component.html
+++ b/F1nalLap/src/app/pages/last-temps/last-temps.component.html
@@ -75,11 +75,15 @@
             <mat-error *ngIf="temporadaControl.hasError('max')">
               El número de temporada no puede ser mayor a 2025
             </mat-error>
+            <mat-error *ngIf="temporadaControl.hasError('required')">
+              La temporada es requerida
+            </mat-error>
           </mat-form-field>
         </div>
         <div class="buttons">
           <button (click)="mostrarPilotos()">Ranking de Pilotos</button>
           <button (click)="mostrarEquipos()">Ranking de Equipos</button>
+          <button (click)="mostrarCarreras()">Carreras</button>
         </div>
         <br />
         <br />
@@ -87,7 +91,8 @@
           <h3
             *ngIf="
               (currentView() === 'drivers' && pilotos().length) ||
-              (currentView() === 'teams' && equipos().length)
+              (currentView() === 'teams' && equipos().length) ||
+              (currentView() === 'races' && carreras().length)
             "
             style="text-align: center"
           >
@@ -153,6 +158,47 @@
             <tr
               mat-row
               *matRowDef="let row; columns: displayedColumnsTeams"
+            ></tr>
+          </table>
+
+
+          <!-- ***** Tabla de Carreras ***** -->
+          <table
+            mat-table
+            [dataSource]="carreras()"
+            class="mat-elevation-z8"
+            id="tabla-carreras"
+            *ngIf="currentView() === 'races' && carreras().length"
+          >
+            <ng-container matColumnDef="round">
+              <th mat-header-cell *matHeaderCellDef>Ronda</th>
+              <td mat-cell *matCellDef="let row">{{ row.round }}</td>
+            </ng-container>
+
+            <ng-container matColumnDef="race">
+              <th mat-header-cell *matHeaderCellDef>Carrera</th>
+              <td mat-cell *matCellDef="let row">{{ row.race }}</td>
+            </ng-container>
+
+            <ng-container matColumnDef="date">
+              <th mat-header-cell *matHeaderCellDef>Fecha</th>
+              <td mat-cell *matCellDef="let row">
+                {{ row.date | date : "dd/MM/yyyy" }}
+              </td>
+            </ng-container>
+
+            <ng-container matColumnDef="winner">
+              <th mat-header-cell *matHeaderCellDef>Resultado</th>
+              <td mat-cell *matCellDef="let row">
+                1. {{ row.winner }}...
+                <a style="text-decoration: underline; font-size: 10px;" (click)="openDialog(row.round)">mostrar todo</a>
+              </td>
+            </ng-container>
+
+            <tr mat-header-row *matHeaderRowDef="displayedColumnsRaces"></tr>
+            <tr
+              mat-row
+              *matRowDef="let row; columns: displayedColumnsRaces"
             ></tr>
           </table>
         </div>
