Añadir titulo carrera

--- a/F1nalLap/src/app/components/dialog-season-results/dialog-season-results.component.html
+++ b/F1nalLap/src/app/components/dialog-season-results/dialog-season-results.component.html
@@ -1,4 +1,4 @@
-<h2 mat-dialog-title>Resultado de la temporada {{ season }} y ronda {{ round }}</h2>
+<h2 mat-dialog-title>Resultado de {{race}} - {{ season }}</h2>
 
 <mat-dialog-content class="mat-typography">
   <table mat-table [dataSource]="raceData[0].results" class="mat-elevation-z8">
