--- a/F1nalLap/src/app/pages/last-temps/last-temps.component.html
+++ b/F1nalLap/src/app/pages/last-temps/last-temps.component.html
@@ -191,7 +191,7 @@
               <th mat-header-cell *matHeaderCellDef>Resultado</th>
               <td mat-cell *matCellDef="let row">
                 1. {{ row.winner }}...
-                <a style="text-decoration: underline; font-size: 10px;" (click)="openDialog(row.round)">mostrar todo</a>
+                <a style="text-decoration: underline; font-size: 10px;" (click)="openDialog(row.round, row.race)">mostrar todo</a>
               </td>
             </ng-container>
 
