--- a/F1nalLap/src/styles.scss
+++ b/F1nalLap/src/styles.scss
@@ -89,7 +89,7 @@ nav {
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   border-top: 1px solid white;
   border-bottom: 1px solid white;
-  z-index: 1000;
+  z-index: 10;
   display: flex;
   justify-content: flex-start;
   align-items: center;
@@ -212,16 +212,20 @@ button:hover {
   width: 100%;
   height: 6px;
   background-color: transparent;
-  z-index: 9999; /* Asegura que esté por encima de otros elementos */
+  z-index: 1050; /* Asegura que esté por encima de otros elementos */
   /*border-top: 2px solid white;*/
   margin-bottom: 55px;
 }
 
 #progress-bar {
+  z-index: 10;
   height: 100%;
   width: 0;
   background-color: #da0000; /* Color de la barra de progreso */
 }
+
+
+
 
 
 .mat-mdc-button:not(:disabled) { // Boton principal
@@ -247,7 +251,7 @@ button:hover {
 }
 
 .mat-mdc-menu-item.mat-focus-indicator { // Subitem
-  z-index: 100000 !important;
+  //z-index:  !important;
   color: white !important;
   background-color: rgb(24, 24, 24) !important;
 }
@@ -299,6 +303,9 @@ button:hover {
   nav a {
     font-size: 11px;
   }
+  .mdc-dialog--open .mat-mdc-dialog-surface, .mdc-dialog--closing .mat-mdc-dialog-surface {
+    width: 80%;
+  }
 }
 
 /* Pantalla Pequeña */
@@ -337,6 +344,7 @@ button:hover {
     font-size: 11px !important;
   }
 
+  
 
 }
 
@@ -367,4 +375,26 @@ button:hover {
     font-size: 9px;
   }
 
+}
+
+
+
+
+#dialogo {
+  font-size: 10px !important;
+  color:black !important;
+  padding: 0!important;
+  margin: 0!important;
+  width: 2rem!important;
+  border-radius: 5px!important;
+  border: 2px solid #a5a5a5!important;
+  background-color: #e2e2e2!important;
+  cursor: pointer!important;
+  transition: background-color 0.6s ease, border 1s ease!important;
+}
+
+#dialogo:hover {
+  color: white !important;
+  background-color: #da0000 !important;
+  border: 2px solid black !important;
 }
