--- a/F1nalLap/src/app/pages/temp-actual/temp-actual.component.html
+++ b/F1nalLap/src/app/pages/temp-actual/temp-actual.component.html
@@ -29,6 +29,9 @@
           <button mat-menu-item [routerLink]="['/ranking']" [queryParams]="{ view: 'teams' }">
             Equipos
           </button>
+          <button mat-menu-item [routerLink]="['/ranking']" [queryParams]="{ view: 'races' }">
+            Carreras
+          </button>
         </mat-menu>
 
         <a mat-button href="circuits">Simulador</a>
