--- a/F1nalLap/src/app/components/dialog-season-results/dialog-season-results.component.html
+++ b/F1nalLap/src/app/components/dialog-season-results/dialog-season-results.component.html
@@ -1,35 +1,37 @@
 <h2 mat-dialog-title>Resultado de {{race}} - {{ season }}</h2>
 
 <mat-dialog-content class="mat-typography">
-  <table mat-table [dataSource]="raceData[0].results" class="mat-elevation-z8">
-    <ng-container matColumnDef="position">
-      <th mat-header-cell *matHeaderCellDef>Posición</th>
-      <td mat-cell *matCellDef="let row">{{ row.position }}</td>
-    </ng-container>
+  <div class="table-container">
+    <table mat-table [dataSource]="raceData[0].results" class="mat-elevation-z8">
+      <ng-container matColumnDef="position">
+        <th mat-header-cell *matHeaderCellDef class="sticky-header column-position">Pos.</th>
+        <td mat-cell *matCellDef="let row" class="column-position">{{ row.position }}</td>
+      </ng-container>
 
-    <ng-container matColumnDef="driver">
-      <th mat-header-cell *matHeaderCellDef>Conductor</th>
-      <td mat-cell *matCellDef="let row">{{ row.driver }}</td>
-    </ng-container>
+      <ng-container matColumnDef="driver">
+        <th mat-header-cell *matHeaderCellDef class="sticky-header column-driver">Piloto</th>
+        <td mat-cell *matCellDef="let row" class="column-driver">{{ row.driver }}</td>
+      </ng-container>
 
-    <ng-container matColumnDef="constructor">
-      <th mat-header-cell *matHeaderCellDef>Constructor</th>
-      <td mat-cell *matCellDef="let row">{{ row.constructor }}</td>
-    </ng-container>
+      <ng-container matColumnDef="constructor">
+        <th mat-header-cell *matHeaderCellDef class="sticky-header column-constructor">Equipo</th>
+        <td mat-cell *matCellDef="let row" class="column-constructor">{{ row.constructor }}</td>
+      </ng-container>
 
-    <ng-container matColumnDef="fastestLapTime">
-      <th mat-header-cell *matHeaderCellDef>Vuelta rápida</th>
-      <td mat-cell *matCellDef="let row">{{ row.fastestLapTime }}</td>
-    </ng-container>
+      <ng-container matColumnDef="fastestLapTime">
+        <th mat-header-cell *matHeaderCellDef class="sticky-header column-fastest-lap">Vuelta rápida</th>
+        <td mat-cell *matCellDef="let row" class="column-fastest-lap">{{ row.fastestLapTime }}</td>
+      </ng-container>
 
-    <ng-container matColumnDef="points">
-      <th mat-header-cell *matHeaderCellDef>Puntos</th>
-      <td mat-cell *matCellDef="let row">+{{ row.points }}</td>
-    </ng-container>
+      <ng-container matColumnDef="points">
+        <th mat-header-cell *matHeaderCellDef class="sticky-header column-points">Pts.</th>
+        <td mat-cell *matCellDef="let row" class="column-points">+{{ row.points }}</td>
+      </ng-container>
 
-    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-    <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
-  </table>
+      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+    </table>
+  </div>
 </mat-dialog-content>
 
 <mat-dialog-actions align="end">
