--- a/F1nalLap/src/app/components/dialog-season-results/dialog-season-results.component.scss
+++ b/F1nalLap/src/app/components/dialog-season-results/dialog-season-results.component.scss
@@ -1,79 +1,66 @@
 table {
-    max-width: 40%!important;
-    border-collapse: collapse;
-    margin: 20px 0;
-  }
-  
-  table th,
-  table td {
-    border: 1px solid #ddd;
-    padding: 8px;
-    text-align: left;
-  }
-  
-  table th {
-    background-color: #da0000;
-    color: white;
-  }
-  
-  table tr:nth-child(even) {
-    background-color: #f2f2f2;
-  }
-  
+  max-width: 40% !important;
+  border-collapse: collapse;
+}
 
-/* Botones */
-.buttons {
-    text-align: center;
-    margin-bottom: 1.5rem;
-  
-  }
-  
-  /* Placeholder antes de cargar datos */
-  .placeholder {
-    text-align: center;
-    color: #666;
-  }
+table th,
+table td {
+  border: 1px solid #ddd;
+  padding: 8px;
+  text-align: left;
+}
 
-  .rankings {
-    display: grid;
-    grid-template-columns: repeat(1, 60%);
-    justify-content: center;
-    //gap: 2rem;
-    row-gap: 1rem;
-    column-gap: 1.5rem;
-    padding: 0 .5rem;
-    margin-top: 1rem;
+table th {
+  background-color: #da0000;
+  color: white;
+}
+
+table tr:nth-child(even) {
+  background-color: #f2f2f2;
+}
+
+.sticky-header {
+  position: sticky;
+  top: 0;
+}
+
+@media (max-width: 800px) {
+}
+
+@media (max-width: 600px) {
+  th,
+  td {
+    font-size: 11px;
   }
-  
-  @media (max-width: 800px) {
-    .rankings {
-      grid-template-columns: repeat(1, 80%);
+  .mat-cell {
+    display: block;
+    width: 100%;
+  }
+  table {
+    width: 100%;
+  }
+}
+
+@media (max-width: 490px) {
+    th,
+  td {
+    font-size: 9px;
+  }
+  .mat-cell {
+    display: block;
+    width: 100%;
+  }
+  table {
+    width: 100%;
+  }
+}
+
+@media (max-width: 400px){
+  table{
+    font-size: 7px;
+    width: 100%;
+  }
+  .mat-column-fastestLapTime {
+      display: none;
     }
-  }
-
-  @media (max-width: 500px) {
-    .rankings {
-      grid-template-columns: repeat(1, 100%);
-    }
-  }
-  
-  @media (max-width: 400px) {
-    .rankings {
-      grid-template-columns: repeat(1, 80%)!important;
-    }
-    #tabla-pilotos{
-      margin-left: -40px;
-    }
-  }
-  
-
-
-  ::ng-deep .mdc-text-field--filled:not(.mdc-text-field--disabled).mdc-text-field--focused .mdc-floating-label{
-    color:#da0000 !important;
-  }
-
-
-  ::ng-deep .mdc-text-field--filled:not(.mdc-text-field--disabled) .mdc-line-ripple::after {
-    border-bottom-color: #da0000 !important;
-  }
-
+}
