--- a/F1nalLap/src/app/pages/home/home.component.html
+++ b/F1nalLap/src/app/pages/home/home.component.html
@@ -31,6 +31,9 @@
           <button mat-menu-item [routerLink]="['/ranking']" [queryParams]="{ view: 'teams' }">
             Equipos
           </button>
+          <button mat-menu-item [routerLink]="['/ranking']" [queryParams]="{ view: 'races' }">
+            Carreras
+          </button>
         </mat-menu>
         
 
