--- a/F1nalLap/src/app/pages/ranking/ranking.component.scss
+++ b/F1nalLap/src/app/pages/ranking/ranking.component.scss
@@ -122,3 +122,23 @@
     margin-right: .5rem;
   }
   
+.race-card {
+  display: flex;
+  flex-direction: column;
+  align-items: center; /* centrado opcional */
+}
+
+.divider {
+  width: 100%;
+  border: none;
+  border-bottom: 1px solid #000000;
+  margin: 0.5rem 0;
+}
+
+.race-card img {
+  box-shadow: none;
+}
+
+.race-card ul {
+  list-style: none;
+}
